Progressing in oAuth core inclusion and refactoring Identified the serial number as a specific configuration element of the mower
Signed-off-by: clinique <gael@lhopital.org>